--- a/SBL-CRM/Resources/layout/Block2Fragment.axml
+++ b/SBL-CRM/Resources/layout/Block2Fragment.axml
@@ -98,17 +98,31 @@
                     style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light" />
-                <EditText
-                    android:textCursorDrawable="@null"
+                <LinearLayout
                     android:layout_column="1"
-                    android:id="@+id/b2fPromosEdit"
                     android:layout_height="wrap_content"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:background="@drawable/bottomline"
-                    android:textColorHint="#E0E0E0"
-                    android:textColor="#000000"
-                    android:hint="ТМ акции OTC-фарм" />
+                    android:orientation="horizontal"
+                    android:layout_width="wrap_content">
+                    <EditText
+                        android:textCursorDrawable="@null"
+                        android:id="@+id/b2fPromosEdit"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:background="@drawable/bottomline"
+                        android:textColorHint="#E0E0E0"
+                        android:textColor="#000000"
+                        android:hint="ТМ акции OTC-фарм"
+                        android:layout_weight="1" />
+                    <Button
+                        android:id="@+id/b2fPromosButton"
+                        android:layout_height="wrap_content"
+                        android:layout_width="wrap_content"
+                        android:text="..."
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp" />
+                </LinearLayout>
             </TableRow>
             <TableRow
                 android:id="@+id/b2fTRContent6">
@@ -127,7 +141,8 @@
                     android:background="@drawable/bottomline"
                     android:textColorHint="#E0E0E0"
                     android:textColor="#000000"
-                    android:hint="Количество первостольников" />
+                    android:hint="Количество первостольников"
+                    android:numeric="integer" />
             </TableRow>
         </TableLayout>
     </ScrollView>
