--- a/SBL-CRM/Resources/layout/Main.axml
+++ b/SBL-CRM/Resources/layout/Main.axml
@@ -82,6 +82,14 @@
             android:layout_centerVertical="true"
             android:paddingRight="14dp" />
         <ImageView
+            android:src="@drawable/ic_loop_black_36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/maSync"
+            android:layout_centerVertical="true"
+            android:paddingRight="14dp"
+            android:layout_alignParentRight="true" />
+        <ImageView
             android:src="@drawable/ic_exit_to_app_black_36dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
