--- a/SBL-CRM/Resources/layout/Block1Fragment.axml
+++ b/SBL-CRM/Resources/layout/Block1Fragment.axml
@@ -18,13 +18,16 @@
             android:minHeight="25px"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/b1fTableLayout">
+            android:id="@+id/b1fTableLayout"
+            android:background="#FFFFFF">
             <TableRow
-                android:id="@+id/b1fTRHeader">
+                android:id="@+id/b1fTRHeader"
+                android:visibility="gone">
                 <TextView
                     android:layout_column="0"
                     android:id="@+id/textView1"
-                    android:width="300dp" />
+                    android:width="300dp"
+                    android:layout_marginRight="24dp" />
                 <TextView
                     android:layout_column="1"
                     android:id="@+id/textView2"
@@ -34,136 +37,143 @@
                 android:id="@+id/b1fRow1">
                 <TextView
                     android:text="Название АС"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="TradenetText"
                     android:layout_column="1"
-                    style="@style/text_row"
                     android:id="@+id/b1fTradenetText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow2">
                 <TextView
                     android:text="Город"
                     android:layout_column="0"
-                    style="@style/text_row_large"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="CityText"
                     android:layout_column="1"
                     android:id="@+id/b1fCityText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow3">
                 <TextView
                     android:text="Название Аптеки"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="PharmacyNameText"
                     android:layout_column="1"
                     android:id="@+id/b1fPharmacyNameText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow4">
                 <TextView
                     android:text="Адрес Аптеки"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="PharmacyAddressText"
                     android:layout_column="1"
                     android:id="@+id/b1fPharmacyAddressText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow5">
                 <TextView
                     android:text="Категория OTC-фарм"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="CategoryInOTCText"
                     android:layout_column="1"
                     android:id="@+id/b1fCategoryInOTCText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow6">
                 <TextView
                     android:text="Дата посл. визита"
                     android:layout_column="0"
-                    style="@style/text_row_large"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="LastAttendanceText"
                     android:layout_column="1"
                     android:id="@+id/b1fLastAttendanceText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow7">
                 <TextView
                     android:text="Дата след. визита"
-                    style="@style/text_row_large"
                     android:layout_column="0"
-                    android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="NextAttendanceText"
                     android:layout_column="1"
                     android:id="@+id/b1fNextAttendanceText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow8">
                 <TextView
                     android:text="Всего визитов за цикл"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <TextView
                     android:text="AllAttendanciesText"
                     android:layout_column="1"
                     android:id="@+id/b1fAllAttendanciesText"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/fcs_block1" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow9">
                 <TextView
                     android:text="Категория в Сети"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <Spinner
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/b1fCategoryNetSpinner" />
+                    android:id="@+id/b1fCategoryNetSpinner"
+                    android:layout_marginRight="24dp" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow10">
                 <TextView
                     android:text="Телефон"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <EditText
                     android:textCursorDrawable="@null"
                     android:layout_column="1"
@@ -174,16 +184,18 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:hint="Телефон"
-                    android:phoneNumber="true" />
+                    android:phoneNumber="true"
+                    android:enabled="false"
+                    android:layout_marginRight="24dp" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow11">
                 <TextView
                     android:text="ФИО закупщика"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <EditText
                     android:textCursorDrawable="@null"
                     android:layout_column="1"
@@ -194,60 +206,67 @@
                     android:background="@drawable/bottomline"
                     android:textColorHint="#E0E0E0"
                     android:textColor="#000000"
-                    android:hint="ФИО закупщика" />
+                    android:hint="ФИО закупщика"
+                    android:enabled="false"
+                    android:layout_marginRight="24dp" />
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow12">
                 <TextView
                     android:text="ТМ акции OTC-фарм"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:gravity="left"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <LinearLayout
                     android:layout_column="1"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_width="wrap_content">
-                    <TextView
-                        android:id="@+id/b1fPromosText"
-                        android:text="ТМ акции OTC-фарм"
-                        style="@style/text_row_large"
-                        android:background="@android:color/background_light"
+                    android:layout_width="wrap_content"
+                    android:layout_marginRight="24dp">
+                    <EditText
+                        android:textCursorDrawable="@null"
+                        android:layout_column="1"
+                        android:id="@+id/b1fPromosEdit"
+                        android:background="@drawable/bottomline"
+                        android:textColorHint="#E0E0E0"
+                        android:textColor="#000000"
+                        android:paddingTop="10dp"
+                        android:paddingBottom="10dp"
+                        android:hint="ТМ акции OTC-фарм"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:layout_weight="1"
-                        android:layout_gravity="center_vertical" />
+                        android:enabled="false" />
                     <Button
                         android:id="@+id/b1fPromosButton"
                         android:layout_height="wrap_content"
                         android:layout_width="wrap_content"
                         android:text="..."
-                        android:paddingTop="10dp"
-                        android:paddingBottom="10dp" />
+                        android:enabled="false" />
                 </LinearLayout>
             </TableRow>
             <TableRow
                 android:id="@+id/b1fRow13">
                 <TextView
                     android:text="Количество первостольников"
-                    style="@style/text_row_large"
                     android:layout_column="0"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <EditText
                     android:textCursorDrawable="@null"
                     android:layout_column="1"
                     android:id="@+id/b1fPharmacistCountEdit"
-                    android:layout_height="wrap_content"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:background="@drawable/bottomline"
                     android:textColorHint="#E0E0E0"
                     android:textColor="#000000"
                     android:hint="Количество первостольников"
-                    android:numeric="integer" />
+                    android:numeric="integer"
+                    android:enabled="false"
+                    android:layout_marginRight="24dp" />
             </TableRow>
             <TableRow
                 android:minWidth="25px"
@@ -256,9 +275,9 @@
                 <TextView
                     android:text="Комментарий"
                     android:layout_column="0"
-                    style="@style/text_row_large"
                     android:background="@android:color/background_light"
-                    android:layout_gravity="center_vertical" />
+                    android:layout_gravity="center_vertical"
+                    style="@style/control_label" />
                 <EditText
                     android:textCursorDrawable="@null"
                     android:layout_column="1"
@@ -269,8 +288,14 @@
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
                     android:hint="Комментарий"
-                    android:inputType="textCapSentences"
-                    android:maxWidth="300dp" />
+                    android:inputType="textCapSentences|textMultiLine"
+                    android:maxWidth="450dp"
+                    android:layout_marginBottom="10dp"
+                    android:enabled="false"
+                    android:layout_marginRight="24dp"
+                    android:minWidth="300dp"
+                    android:minLines="2"
+                    android:maxLines="5" />
             </TableRow>
         </TableLayout>
     </ScrollView>
